k8s/velero-example-pod.yaml
# Copyright 2017 the Velero contributors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: v1
kind: Namespace
metadata:
  name: velero-example
  labels:
    app: velero-example

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velero-deployment
  namespace: velero-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: velero-example
  template:
    metadata:
      labels:
        app: velero-example
    spec:
      volumes:
        - name: velero-logs
          persistentVolumeClaim:
           claimName: velero-logs
      containers:
      - name: hello-container
        image: busybox
        command:
          - sh
          - -c
          - 'while true; do echo "`date` [`hostname`] Hello from velero example." >> /mnt/store/greet.txt; sleep $(($RANDOM % 5 + 300)); done'
        volumeMounts:
          - mountPath: "/var/log/velero"
            name: velero-logs
            readOnly: false
