k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whatever
spec:
  rules:
  - host: whatever.A.B.C.D.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whatever
            port:
              number: 1234
