k8s/netpol-allow-testcurl-for-testweb.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-testcurl-for-testweb
spec:
  podSelector:
    matchLabels:
<<<<<<< HEAD
      app: testweb
=======
      run: testweb
>>>>>>> Otomato version
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: testcurl
